# confique

./: CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yaml
examples/: builder.rs  clap.rs  parse_env.rs  simple.rs  validate.rs
examples/files/: simple.toml  validate.toml
examples/files/etc/: simple.yaml
macro/: Cargo.toml
macro/src/: ast.rs  gen.rs  ir.rs  lib.rs  parse.rs  util.rs
src/: builder.rs  env.rs  error.rs  example.rs  file.rs  format.rs  internal.rs  json5.rs  lib.rs  meta.rs  source.rs  template.rs  toml.rs  yaml.rs
src/env/: mod.rs  parse.rs  tests.rs
src/test_utils/: example1.rs  example2.rs  mod.rs
tests/: array_default.rs  check_symbols.rs  env.rs  general.rs  map_default.rs  partial_props.rs  validation.rs
tests/format-output/: 1-default.json5  1-default.toml  1-default.yaml  1-indent-2.toml  1-nested-gap-2.toml  1-no-comments.json5  1-no-comments.toml  1-no-comments.yaml  2-default.json5  2-default.toml  2-default.yaml
tests/indirect-serde/: Cargo.toml  README.md  run.rs
tests/indirect-serde/src/: main.rs
