[package]
name = "confique"
version = "0.2.6"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2021"

description = "Type-safe, layered, light-weight, `serde`-based configuration library"
documentation = "https://docs.rs/confique/"
repository = "https://github.com/LukasKalbertodt/confique/"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["config", "configuration", "conf", "serde", "type-safe"]
categories = ["config"]
exclude = [".github"]


[[example]]
name = "simple"
required-features = ["toml"]

[[test]]
name = "indirect-serde"
path = "tests/indirect-serde/run.rs"
harness = false


[features]
default = ["toml", "yaml", "json5"]
yaml = ["serde_yaml"]


[dependencies]
confique-macro = { version = "=0.0.10", path = "macro" }
json5 = { version = "0.4.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
pretty_assertions = "1.2.1"
