[package]
name = "confique"
version = "0.3.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2021"
rust-version = "1.61.0"

description = "Type-safe, layered, light-weight, `serde`-based configuration library"
documentation = "https://docs.rs/confique/"
repository = "https://github.com/LukasKalbertodt/confique/"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["config", "configuration", "conf", "serde", "type-safe"]
categories = ["config"]
exclude = [".github"]


[[example]]
name = "simple"
required-features = ["toml"]

[[example]]
name = "validate"
required-features = ["toml"]

[[test]]
name = "indirect-serde"
path = "tests/indirect-serde/run.rs"
harness = false

[[test]]
name = "validation"
required-features = ["toml"]


[features]
default = []
yaml = ["serde_yaml"]


[dependencies]
confique-macro = { version = "=0.0.11", path = "macro" }
json5 = { version = "0.4.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
pretty_assertions = "1.2.1"


[package.metadata.docs.rs]
all-features = true
