[package]
name = "confique-macro"
version = "0.0.2"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = "Macro crate for 'confique'. Do not use directly! Semver not guaranteed!"
repository = "https://github.com/LukasKalbertodt/confique/"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.3.2"
